tests/baselines/reference/genericArrayWithoutTypeAnnotation.errors.txt
==== tests/cases/compiler/genericArrayWithoutTypeAnnotation.ts (1 errors) ====
    interface IFoo<T>{
    }
    class Bar {
        public getBar(foo: IFoo[]) {
                           ~~~~
!!! genericArrayWithoutTypeAnnotation.ts(4,24): error TS2090: Generic type 'IFoo<T>' requires 1 type argument(s).
        }
    }
    